syntax = "proto3";

service TalkCloud {
    // 注册
    rpc AppRegister(AppRegReq) returns (AppRegRsp) {}
    rpc DeviceRegister(DeviceRegReq) returns (DeviceRegRsp) {}
    rpc Login(LoginReq) returns (LoginRsp) {}
    rpc Logout(LogoutReq) returns (LogoutRsp) {}

    // 好友管理
    rpc AddFriend(FriendNewReq) returns (FriendNewRsp) {}
    rpc DelFriend(FriendDelReq) returns (FriendDelRsp) {}
    rpc GetFriendList(FriendsReq) returns (FriendsRsp) {}

    // 组管理
    rpc CreateGroup(GroupNewReq) returns (GroupNewRsp) {}
    rpc JoinGroup(GrpUserAddReq) returns (GrpUserAddRsp) {}
    rpc RemoveGrpUser(GrpUserDelReq) returns (GrpUserDelRsp) {}
    rpc ExitGrp(UserExitReq) returns (UserExitRsp) {}
    rpc RemoveGrp(GroupDelReq) returns (GroupDelRsp) {}
    rpc GetGroupList(GrpListReq) returns (GroupListRsp) {}
}

/*************** Register ***************/
// 头部信息
message Head {
    string version = 1;     // 主版本号
    string sub_version = 2; // 子版本号
    int64 timestamp = 3;    // 时间戳
}

// 错误信息
message ErrorMsg {
    int64 code = 1; // 错误码, 0表示成功，其他表示失败
    string msg = 2; // 错误消息
}

// App注册请求
message AppRegReq {
    Head head = 1;
    string name = 2;
    string password = 3;
}

// App注册响应
message AppRegRsp {
    int64 id = 1;
    int64 timestamp = 2;
    ErrorMsg err = 3;
}

// Device注册请求
message DeviceRegReq {
    uint64 account_id = 1;  // 管理账户ID
    string device_list = 2; // IMEI列表
}

// Device注册响应
message DeviceRegRsp {
    ErrorMsg err = 1;
}

// 登录请求
message LoginReq {
    Head head = 1;
    string name = 2;
    string passwd = 3;
}

message LoginRsp {
    // 待定
}

// 登出请求
message LogoutReq {
    Head head = 1;
    string name = 2;
}

message LogoutRsp {
    // 待定
}

/************** User_Friend *************/
message FriendNewReq {
    uint64 uid = 1;
    uint64 fuid = 2;
}

message FriendNewRsp {
    ErrorMsg err = 1;
}

message FriendDelReq {
    uint64 uid = 1;
    uint64 fuid = 2;
    int64 timestamp = 3;
}

message FriendDelRsp {
    ErrorMsg err = 1;
}

message FriendsReq {
    uint64 uid = 1;
}

message FriendRecord {
    uint64 uid = 1;
    string name = 2;
    int64 imei = 3;
}

message FriendsRsp {
    uint64 uid = 1;
    repeated FriendRecord friend_list = 2;
}

/**************** Group *****************/
message GroupNewReq {
    uint64 uid = 1;
    string group_name = 2;
}

message GroupNewRsp {
    ErrorMsg err = 1;
}

message GrpUserAddReq {
    uint64 uid = 1;
    uint64 gid = 2;
    int64 timestamp = 3;
}

message GrpUserAddRsp {
    ErrorMsg err = 1;
}

message GrpUserDelReq {
    uint64 uid = 1;
    uint64 gid = 2;
    int64 timestamp = 3;
}

message GrpUserDelRsp {
    ErrorMsg err = 1;
}

message UserExitReq {
    uint64 uid = 1;
    uint64 gid = 2;
}

message UserExitRsp {
    ErrorMsg err = 1;
}

message GroupDelReq {
    uint64 uid = 1;
    uint64 role_type = 2;
    uint64 gid = 3;
}

message GroupDelRsp {
    ErrorMsg err = 1;
}

message GrpListReq {
    uint64 uid = 1;
}

message GroupRecord {
    uint64 gid = 1;
    string group_name = 2;
}

message GroupListRsp {
    uint64 uid = 1;
    repeated GroupRecord group_list = 2;
    ErrorMsg err = 3;
}
